styling destination page

--- a/index.css
+++ b/index.css
@@ -9,12 +9,12 @@
   --clr-white: 0 0% 100%;
 
   /* font-sizes */
-  --fs-900: clamp(5rem, 8vw + 1rem, 9.35rem);
-  --fs-800: clamp(4.75rem, 7vw, 6.25rem);
-  --fs-700: clamp(4.25rem, 4vw, 5.5rem);
-  --fs-600: clamp(1rem, 3vw, 2rem);
-  --fs-500: clamp(1rem, 3vw, 2rem);
-  --fs-400: clamp(1rem, 2.75vw, 1.75rem);
+  --fs-900: clamp(5rem, 10vw + 1rem, 9.35rem);
+  --fs-800: clamp(4.75rem, 10vw, 6.25rem);
+  --fs-700: clamp(4.25rem, 6vw, 5.5rem);
+  --fs-600: clamp(1.5rem, 4.75vw, 2.5rem);
+  --fs-500: clamp(1rem, 1vw + 0.5rem, 2rem);
+  --fs-400: 1.25rem;
   --fs-300: 1rem;
   --fs-200: 0.875rem;
 
@@ -105,51 +105,6 @@ body {
   padding-inline: 2em;
   margin-inline: auto;
   max-width: 80rem;
-}
-
-.grid-container {
-  text-align: center;
-  display: grid;
-  place-items: center;
-  padding-inline: 1.5rem;
-}
-
-/* anything inside the grid-container has a max-width to number of characters */
-
-.grid-container * {
-  max-width: 50ch;
-}
-
-@media (min-width: 65em) {
-  .grid-container {
-    column-gap: var(--container-gap, 2rem);
-    grid-template-columns: minmax(1em, 1fr) repeat(2, minmax(0, 40rem)) minmax(
-        1em,
-        1fr
-      );
-    /* grid-template-rows: 3fr min-content 1fr; */
-  }
-  .grid-container > *:first-child {
-    grid-column: 2;
-  }
-
-  .grid-container > *:last-child {
-    grid-column: 3;
-  }
-
-  .grid-container--home {
-    padding-bottom: max(6rem, 20vh);
-    align-items: end;
-  }
-
-  .grid-container {
-    text-align: left;
-  }
-
-  .grid-container > div > *,
-  .grid-container > div > h1 > span {
-    margin-top: 3rem;
-  }
 }
 
 .sr-only {
@@ -418,6 +373,10 @@ body {
 /* ------------------- */
 /*    Page specific       */
 /* ------------------- */
+body {
+  background-size: cover;
+  background-position: bottom center;
+}
 
 .home {
   background-image: url(./assets/home/background-home-mobile.jpg);
@@ -439,6 +398,9 @@ body {
     background-size: cover;
     background-position: center;
   }
+}
+
+.grid-container--destination {
 }
 
 /* ------------------- */
@@ -474,5 +436,114 @@ body {
 
   .primary-navigation {
     margin-block: 2rem;
+  }
+}
+
+/* ----------------------------- */
+/* Layout                        */
+/* ----------------------------- */
+
+.grid-container {
+  text-align: center;
+  display: grid;
+  place-items: center;
+  padding-inline: 1rem;
+  padding-bottom: 4rem;
+}
+
+.grid-container p:not([class]) {
+  max-width: 50ch;
+}
+
+.numbered-title {
+  grid-area: title;
+}
+
+/* destination layout */
+
+.grid-container--destination {
+  --flow-space: 2rem;
+  grid-template-areas:
+    "title"
+    "image"
+    "tabs"
+    "content";
+}
+
+.grid-container--destination > img {
+  grid-area: image;
+  max-width: 60%;
+}
+
+.grid-container--destination > .tab-list {
+  grid-area: tabs;
+}
+
+.grid-container--destination > .destination-info {
+  grid-area: content;
+}
+
+.destination-meta {
+  flex-direction: column;
+  border-top: 1px solid hsl(var(--clr-white) / 0.1);
+  padding-top: 2.5rem;
+  margin-top: 2.5rem;
+}
+
+.destination-meta > p {
+  font-size: 1.75rem;
+}
+
+@media (min-width: 35em) {
+  .numbered-title {
+    justify-self: start;
+    margin-top: 2rem;
+  }
+
+  .destination-meta {
+    flex-direction: row;
+    justify-content: space-evenly;
+  }
+}
+
+@media (min-width: 45em) {
+  .grid-container {
+    text-align: left;
+    column-gap: var(--container-gap, 2rem);
+    grid-template-columns: minmax(1rem, 1fr) repeat(2, minmax(0, 30rem)) minmax(
+        1rem,
+        1fr
+      );
+  }
+
+  .grid-container--home > *:first-child {
+    grid-column: 2;
+  }
+
+  .grid-container--home > *:last-child {
+    grid-column: 3;
+  }
+
+  .grid-container--home {
+    padding-bottom: max(6rem, 20vh);
+    align-items: end;
+  }
+
+  .grid-container--destination {
+    justify-items: start;
+    align-content: start;
+    grid-template-areas:
+      ". title title ."
+      ". image tabs ."
+      ". image content .";
+  }
+
+  .grid-container--destination > img {
+    max-width: 90%;
+  }
+
+  .destination-meta {
+    --gap: 6rem;
+    justify-content: start;
   }
 }
