--- a/index.css
+++ b/index.css
@@ -88,6 +88,10 @@ body {
   gap: var(--gap, 1rem);
 }
 
+.flex-column {
+  flex-direction: column;
+}
+
 .grid {
   display: grid;
   gap: var(--gap, 1rem);
@@ -99,6 +103,10 @@ body {
 
 .flow > *:where(:not(:first-child)) {
   margin-top: var(--flow-space, 1rem);
+}
+
+.flow--space-small {
+  --flow-space: 0.5rem;
 }
 
 .container {
@@ -323,10 +331,11 @@ body {
 }
 
 .underline-indicators > * {
-  padding: var(--underline-gap, 1rem) 0;
+  padding: var(--underline-gap, 0.75rem) 0;
   cursor: pointer;
   border: 0;
   border-bottom: 0.2rem solid hsl(var(--clr-white) / 0);
+  background-color: transparent;
 }
 
 .underline-indicators > *:hover,
@@ -338,6 +347,23 @@ body {
 .underline-indicators > [aria-selected="true"] {
   color: hsl(var(--clr-white) / 1);
   border-color: hsl(var(--clr-white) / 1);
+}
+
+.dot-indicators > * {
+  cursor: pointer;
+  border: 0;
+  border-radius: 50%;
+  padding: 0.5em;
+  background-color: hsl(var(--clr-white) / 0.25);
+}
+
+.dot-indicators > *:hover,
+.dot-indicators > *:focus {
+  background-color: hsl(var(--clr-white) / 0.5);
+}
+
+.dot-indicators > [aria-selected="true"] {
+  background-color: hsl(var(--clr-white) / 1);
 }
 
 .large-button {
@@ -400,7 +426,59 @@ body {
   }
 }
 
-.grid-container--destination {
+/* destination */
+.destination {
+  background-image: url(./assets/destination/background-destination-mobile.jpg);
+}
+
+@media (min-width: 35rem) {
+  .destination {
+    background-position: center center;
+    background-image: url(./assets/destination/background-destination-tablet.jpg);
+  }
+}
+
+@media (min-width: 45rem) {
+  .destination {
+    background-image: url(./assets/destination/background-destination-desktop.jpg);
+  }
+}
+
+.crew {
+  background-image: url(./assets/crew/background-crew-mobile.jpg);
+  background-size: cover;
+  background-position: center bottom;
+  background-repeat: no-repeat;
+}
+
+@media (min-width: 35em) {
+  .crew {
+    background-image: url(./assets/crew/background-crew-tablet.jpg);
+  }
+}
+
+@media (min-width: 45em) {
+  .crew {
+    background-image: url(./assets/crew/background-crew-desktop.jpg);
+  }
+}
+
+/* technology */
+.technology {
+  background-image: url(./assets/technology/background-technology-mobile.jpg);
+}
+
+@media (min-width: 35rem) {
+  .technology {
+    background-position: center center;
+    background-image: url(./assets/destination/background-destination-tablet.jpg);
+  }
+}
+
+@media (min-width: 45rem) {
+  .technology {
+    background-image: url(./assets/destination/background-destination-desktop.jpg);
+  }
 }
 
 /* ------------------- */
@@ -448,7 +526,7 @@ body {
   display: grid;
   place-items: center;
   padding-inline: 1rem;
-  padding-bottom: 4rem;
+  padding-bottom: 2rem;
 }
 
 .grid-container p:not([class]) {
@@ -470,9 +548,10 @@ body {
     "content";
 }
 
-.grid-container--destination > img {
+.grid-container--destination > picture {
   grid-area: image;
-  max-width: 60%;
+  max-width: 90%;
+  align-self: start;
 }
 
 .grid-container--destination > .tab-list {
@@ -538,12 +617,162 @@ body {
       ". image content .";
   }
 
-  .grid-container--destination > img {
+  .grid-container--destination > picture {
     max-width: 90%;
   }
 
   .destination-meta {
-    --gap: 6rem;
+    --gap: min(6vw, 6rem);
     justify-content: start;
+  }
+}
+
+/* Crew layout */
+
+.grid-container--crew {
+  --flow-space: 1.5rem;
+  grid-template-areas:
+    "title"
+    "tabs"
+    "image"
+    "content";
+}
+
+.grid-container--crew > picture {
+  grid-area: image;
+  border-bottom: 1px solid hsl(var(--clr-white) / 0.1);
+}
+
+.grid-container--crew > .dot-indicators {
+  grid-area: tabs;
+}
+
+.grid-container--crew > .crew-details {
+  grid-area: content;
+}
+
+.crew-details * h2 {
+  color: hsl(var(--clr-white) / 0.5);
+}
+
+@media (min-width: 35em) {
+  .grid-container--crew {
+    padding-bottom: 0;
+    grid-template-areas:
+      "title"
+      "content"
+      "tabs"
+      "image";
+  }
+}
+
+@media (min-width: 45em) {
+  .grid-container--crew {
+    grid-template-columns: minmax(1rem, 1fr) minmax(0, 37rem) minmax(0, 23rem) minmax(
+        1rem,
+        1fr
+      );
+    grid-template-areas:
+      ". title title ."
+      ". content image ."
+      ". tabs image .";
+  }
+
+  .grid-container--crew > .dot-indicators {
+    justify-self: start;
+  }
+
+  .grid-container--crew > picture,
+  .grid-container--crew > img {
+    max-width: 100%;
+    grid-column: span 2;
+  }
+
+  .grid-container--crew {
+    text-align: left;
+  }
+
+  .grid-container--crew .crew-details {
+    z-index: 10;
+  }
+}
+
+/* grid container technology */
+
+.grid-container--technology {
+  --flow-space: 1.5rem;
+  /* padding-left: min(2rem, 4vw); */
+  grid-template-areas:
+    "title"
+    "image"
+    "tabs"
+    "content";
+}
+
+.grid-container--technology > .dot-indicators {
+  grid-area: tabs;
+  display: flex;
+}
+
+.grid-container--technology > h1 {
+  grid-area: title;
+}
+
+.grid-container--technology > article {
+  grid-area: content;
+  padding-bottom: min(16rem, 5vh);
+}
+
+.grid-container--technology > img {
+  grid-area: image;
+  position: relative;
+  max-width: 100%;
+  margin-inline: 0;
+}
+
+.dot-indicators--technology > button {
+  background-color: hsl(var(--clr-white) / 0.1);
+  width: 4rem;
+  height: 4rem;
+}
+
+@media (min-width: 35em) {
+  .grid-container--technology {
+    grid-template-areas:
+      "title"
+      "image"
+      "tabs"
+      "content";
+  }
+
+  .grid-container--technology > *:not(:first-child) {
+    margin-top: 2rem;
+  }
+}
+
+@media (min-width: 45em) {
+  .grid-container--technology > .dot-indicators {
+    flex-direction: column;
+    align-items: end;
+  }
+
+  .grid-container--technology {
+    grid-template-columns: minmax(5rem, 1fr) minmax(0, 35rem) minmax(0, 15rem) minmax(
+        5rem,
+        1fr
+      );
+    grid-template-areas:
+      "title title title ."
+      "tabs content image image "
+      "tabs content image image";
+  }
+
+  .grid-container--technology > .dot-indicators {
+    justify-self: start;
+  }
+
+  .grid-container--technology > img {
+    max-width: 100%;
+    /* grid-column: span 2; */
   }
 }
